--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -5,96 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Receipt Splitter</title>
-    <style>
-        h1 {
-            color: #e6e6fa;
-        }
-        h3 {
-            color: #e6e6fa; /* or whichever color you choose */
-            font-weight: bold;
-        }
-        body {
-            background-color: #1e1e1e;
-            color: #f1f1f1;
-        }
-        .container {
-            max-width: 800px;
-            margin-top: 40px;
-        }
-        .btn-primary, .btn-secondary {
-            background-color: #ffb6a3;
-            border-color: #ffb6a3;
-            color: #2c3e50;
-        }
-        .btn-primary:hover, .btn-secondary:hover {
-            background-color: #ff9980;
-            border-color: #ff9980;
-        }
-        .table tbody td {
-            color: #d1d1d1 !important;
-        }
-        .table-bordered th, .table-bordered td {
-            border: 1px solid #444;
-        }
-        .thead-dark {
-            background-color: #333;
-            color: #f1f1f1;
-        }
-        .form-control {
-            background-color: #333; /* Dark background */
-            color: #fff;            /* White text */
-            border: 1px solid #555; /* Border color */
-            padding: 10px;         /* Padding for better spacing */
-            border-radius: 5px;    /* Optional: rounded corners */
-            transition: background-color 0.3s, border-color 0.3s; /* Smooth transition */
-        }
-        .form-control:focus {
-            background-color: #444; /* Slightly lighter background when focused */
-            color: #fff;
-            border-color: #666;     /* Change border color when focused */
-            outline: none;          /* Remove the default outline */
-        }
-        .form-control::placeholder {
-            color: #aaa;            /* Placeholder text color */
-        }
-        /* Style for the autocomplete suggestions dropdown */
-        .dropdown-menu {
-            background-color: #222; /* Dark background for the dropdown */
-            border: 1px solid #666; /* Contrast border for better visibility */
-            border-radius: 5px;     /* Optional: rounded corners */
-            color: #fff;            /* White text for the suggestions */
-        }
-
-        /* Style for each item in the dropdown */
-        .dropdown-item {
-            color: #fff;            /* White text for dropdown items */
-            background-color: #222; /* Dark background for dropdown items */
-        }
-
-        /* Change background on hover */
-        .dropdown-item:hover {
-            background-color: #444; /* Lighter background on hover */
-            color: #fff;            /* White text on hover */
-        }
-    </style>
+    <link rel="stylesheet" href="/css/demo.css">
+    <title>Online Grocery Shopping</title>
 </head>
+
+<div class="navContainer">
+    <nav class="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/mainscreen}" href="/mainscreen">Mainscreen</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/about}" href="/about">About</a>
+            </li>
+            <li class="nav-item title h3-title">Online Grocery Shopping
+            </li>
+        </ul>
+    </nav>
+</div>
+
 <body>
 
 <div class="container">
-    <h1 class="text-center">Receipt Splitter</h1>
+    <!-- Main Title h1 -->
+    <h1 id="title" class="title text-center h1-title" data-text="Online Grocery Shopping">Online Grocery Shopping</h1>
+</div>
+
+<div class="container">
     <hr class="border-secondary">
 
-    <!-- Receipt Line Items -->
-    <h3>Line Item</h3>
+    <!-- Parts -->
+    <h3>Parts</h3>
     <form th:action="@{/mainscreen}" class="mb-3">
         <label for="partkeyword">Filter:</label>
         <input type="text" name="partkeyword" id="partkeyword" size="50" th:value="${partkeyword}" required class="form-control d-inline w-50"/>
         <input type="submit" value="Search" class="btn btn-secondary"/>
         <input type="button" value="Clear" id="btnClearPart" onclick="clearSearch()" class="btn btn-secondary"/>
     </form>
-    <a th:href="@{/showFormAddInPart}" class="btn btn-primary btn-sm mb-3">Add Inhouse Line Item</a>
-    <a th:href="@{/showFormAddOutPart}" class="btn btn-primary btn-sm mb-3">Add Outsourced Line Item</a>
+    <a th:href="@{/showFormAddInPart}" class="btn btn-primary btn-sm mb-3">Add Inhouse Part</a>
+    <a th:href="@{/showFormAddOutPart}" class="btn btn-primary btn-sm mb-3">Add Outsourced Part</a>
 
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
@@ -107,7 +56,7 @@
         </thead>
         <tbody>
         <tr th:each="tempPart : ${parts}">
-            <td th:text="${tempPart.name}">Item Name</td>
+            <td th:text="${tempPart.name}">Part Name</td>
             <td th:text="${tempPart.price}">$0.00</td>
             <td th:text="${tempPart.inv}">Stock</td>
             <td>
@@ -119,15 +68,15 @@
         </tbody>
     </table>
 
-    <!-- Spending Categories -->
-    <h3>Spending Category</h3>
+    <!-- Products -->
+    <h3>Products</h3>
     <form th:action="@{/mainscreen}" class="mb-3">
         <label for="productkeyword">Filter:</label>
         <input type="text" name="productkeyword" id="productkeyword" size="50" th:value="${productkeyword}" required class="form-control d-inline w-50"/>
         <input type="submit" value="Search" class="btn btn-secondary"/>
         <input type="button" value="Clear" id="btnClearProduct" onclick="clearSearch()" class="btn btn-secondary"/>
     </form>
-    <a th:href="@{/showFormAddProduct}" class="btn btn-primary btn-sm mb-3">Add Category</a>
+    <a th:href="@{/showFormAddProduct}" class="btn btn-primary btn-sm mb-3">Add Product</a>
 
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
@@ -140,13 +89,13 @@
         </thead>
         <tbody>
         <tr th:each="tempProduct : ${products}">
-            <td th:text="${tempProduct.name}">Category Name</td>
+            <td th:text="${tempProduct.name}">Product Name</td>
             <td th:text="${tempProduct.price}">$0.00</td>
             <td th:text="${tempProduct.inv}">Stock</td>
             <td>
                 <a th:href="@{/showProductFormForUpdate(productID=${tempProduct.id})}" class="btn btn-primary btn-sm">Update</a>
                 <a th:href="@{/deleteproduct(productID=${tempProduct.id})}" class="btn btn-primary btn-sm"
-                   onclick="if(!(confirm('Are you sure you want to delete this category?')))return false">Delete</a>
+                   onclick="if(!(confirm('Are you sure you want to delete this product?')))return false">Delete</a>
             </td>
         </tr>
         </tbody>
