--- a/src/main/resources/templates/InhousePartForm.html
+++ b/src/main/resources/templates/InhousePartForm.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<html xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/demo.css">
     <title>Part Form</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
+
+<div class="navContainer">
+    <nav class="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/mainscreen}" href="/mainscreen">Mainscreen</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/about}" href="/about">About</a>
+            </li>
+            <li class="nav-item title h3-title">Online Grocery Shopping
+            </li>
+        </ul>
+    </nav>
+</div>
+
 <body>
-<h1>Inhouse Part Detail</h1>
+
+<div class="container">
+    <!-- Main Title h1 -->
+    <h1 id="title" class="title text-center h1-title" data-text="Inhouse Part Detail">Inhouse Part Detail</h1>
+</div>
+
 <form action="#" th:action="@{/showFormAddInPart}" th:object="${inhousepart}" method="POST"}>
 
 <!-- Add hidden form field to handle update -->
@@ -27,7 +50,18 @@
 </form>
 <p><errors path="price" cssClass=""error/><p>
 
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<script>
+    const navbar = document.querySelector('.navbar');
+    const h3Title = document.querySelector('.title');
+
+    setTimeout(() => {
+        h3Title.classList.add('slide-in');
+    }, 300);
+
+    setTimeout(() => {
+        navbar.classList.add('navbar-lit');
+    }, 50);
+</script>
+
 </body>
 </html>
