--- a/src/main/resources/templates/confirmationaddpart.html
+++ b/src/main/resources/templates/confirmationaddpart.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/css/demo.css">
+    <!--    <meta charset="UTF-8">-->
     <meta http-equiv="refresh"
           content="0;URL='mainscreen'">
-<!--    <meta charset="UTF-8">-->
     <title>Title</title>
 </head>
 <body>
