--- a/src/main/resources/templates/confirmationdeleteproduct.html
+++ b/src/main/resources/templates/confirmationdeleteproduct.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--    <meta charset="UTF-8">-->
+    <link rel="stylesheet" href="/css/demo.css">
+    <!--    <meta charset="UTF-8">-->
     <meta http-equiv="refresh"
           content="0;URL='mainscreen'">
     <title>Title</title>
