STEP F * Add "Buy Now" functionality with new method, button in mainscreen.html, and Success/Failure views

--- a/src/main/resources/templates/OutsourcedPartForm.html
+++ b/src/main/resources/templates/OutsourcedPartForm.html
@@ -46,7 +46,8 @@
 
     <p><input type="text" th:field="*{companyName}" placeholder="Company Name" class="form-control mb-4 col-4"/></p>
 
-<p><input type="submit" value="Submit" /></p>
+
+    <p><input class="btn, btn-submit btn-sm" type="submit" value="Submit" /></p>
 </form>
 
 <script>
