--- a/src/main/resources/templates/productForm.html
+++ b/src/main/resources/templates/productForm.html
@@ -47,7 +47,7 @@
     <ul><li th:each="err: ${#fields.allErrors()}" th:text="${err}"></li></ul>
     </div>
     </p>
-    <p><input type="submit" value="Submit" /></p>
+    <p><input class="btn, btn-submit btn-sm" type="submit" value="Submit" /></p>
 </form>
 
 
