--- a/src/main/resources/static/css/demo.css
+++ b/src/main/resources/static/css/demo.css
@@ -147,6 +147,7 @@ h3 {
     background-color: #262A28;
     border-color: #785762;
     border-radius: 30px;
+    color: #BBC4BA;
     transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 .btn-primary:hover, .btn-secondary:hover {
