--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -61,7 +61,7 @@
             <td th:text="${tempPart.inv}">Stock</td>
             <td>
                 <a th:href="@{/showPartFormForUpdate(partID=${tempPart.id})}" class="btn btn-primary btn-sm">Update</a>
-                <a th:href="@{/deletepart(partID=${tempPart.id})}" class="btn btn-primary btn-sm"
+                <a th:href="@{/deletepart(partID=${tempPart.id})}" class="btn btn-delete btn-sm"
                    onclick="if(!(confirm('Are you sure you want to delete this part?')))return false">Delete</a>
             </td>
         </tr>
@@ -94,8 +94,9 @@
             <td th:text="${tempProduct.inv}">Stock</td>
             <td>
                 <a th:href="@{/showProductFormForUpdate(productID=${tempProduct.id})}" class="btn btn-primary btn-sm">Update</a>
-                <a th:href="@{/deleteproduct(productID=${tempProduct.id})}" class="btn btn-primary btn-sm"
+                <a th:href="@{/deleteproduct(productID=${tempProduct.id})}" class="btn btn-delete btn-sm"
                    onclick="if(!(confirm('Are you sure you want to delete this product?')))return false">Delete</a>
+                <a th:href="@{/buyProduct(productID=${tempProduct.id})}" class="btn btn-buy btn-sm">Buy Now</a>
             </td>
         </tr>
         </tbody>
