--- a/src/main/resources/static/css/demo.css
+++ b/src/main/resources/static/css/demo.css
@@ -9,10 +9,16 @@ body {
 
 /* General Responsive Adjustments */
 .container {
-    max-width: 100%;
-    padding: 0 20px;
+    max-width: 80%;
+    justify-self: center;
+    padding: 0;
+    margin: 0;
     background-color: #10151C;
     color: #878B92;
+}
+
+.error {
+    color: #C092A2
 }
 
 #title {
