--- a/src/main/resources/templates/InhousePartForm.html
+++ b/src/main/resources/templates/InhousePartForm.html
@@ -31,7 +31,7 @@
     <h1 id="title" class="title text-center h1-title" data-text="Inhouse Part Detail">Inhouse Part Detail</h1>
 </div>
 
-<form action="#" th:action="@{/showFormAddInPart}" th:object="${inhousepart}" method="POST"}>
+<form class="container" th:action="@{/showFormAddInPart}" th:object="${inhousepart}" method="POST"}>
 
 <!-- Add hidden form field to handle update -->
     <p><input type="hidden" th:field="*{id}"/></p>
@@ -40,12 +40,27 @@
 
 <p><input type="text" path="price" th:field="*{price}" placeholder= "Price" class="form-control mb-4 col-4"/></p>
 
-<p th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price Error</p>
+<p class="error" th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price Error</p>
 
 <p><input type="text" path="inv" th:field="*{inv}" placeholder="Inventory" class="form-control mb-4 col-4"/></p>
-    <p th:if="${#fields.hasErrors('inv')}" th:errors="*{inv}">Inventory Error</p>
+    <p class="error" th:if="${#fields.hasErrors('inv')}" th:errors="*{inv}">Inventory Error</p>
+
+    <p><input type="text" th:field="*{minInv}" placeholder="Set Minimum Inventory" class="form-control mb-4 col-4"/></p>
+    <p class="error" th:if="${#fields.hasErrors('minInv')}" th:errors="*{minInv}">Error</p>
+
+    <p><input type="text" th:field="*{maxInv}" placeholder="Set Maximum Inventory" class="form-control mb-4 col-4"/></p>
+    <p class="error" th:if="${#fields.hasErrors('maxInv')}" th:errors="*{maxInv}">Error</p>
 
     <p><input type="text" th:field="*{partId}" placeholder="Part ID" class="form-control mb-4 col-4"/></p>
+
+    <div class="p" th:if="${#fields.hasErrors()}">
+        <p class="error"><span style="font-weight: bold">Please Fix the Following Errors:</span></p>
+        <ul>
+            <li th:each="err : ${#fields.errors()}">
+                <span class="error" th:text="'- ' + ${err}"></span>
+            </li>
+        </ul>
+    </div>
 
 <p><input class="btn, btn-submit btn-sm" type="submit" value="Submit" /></p>
 </form>
