STEP H * Refactored AddProductController for improved error binding and form input retention. Enhanced EnufPartsValidator with adjusted comparison logic. Updated templates (mainscreen.html) to include Min/Max values and styled form fields (InhousePartForm.html, negativeerror.html) with spans, navbar, and body text adjustments.

--- a/src/main/resources/templates/Failure.html
+++ b/src/main/resources/templates/Failure.html
@@ -26,7 +26,7 @@
 <body style="text-align: center; margin-top: 100px;">
 
   <h1 style="padding: 1rem 1rem 1rem 1rem"><span style="color: #785762">Oops!</span> We are out of Stock for that Meal. Try back later!</h1>
-  <div class="thank-you">
+  <div class="failure">
       <p class="p">You will be redirected to the mainscreen in <span id="countdown">5</span> seconds...</p>
   </div>
 
