--- a/src/main/resources/static/css/demo.css
+++ b/src/main/resources/static/css/demo.css
@@ -219,6 +219,7 @@ h3 {
 .table {
     border: 2px solid #333;
     border-radius: 15px;
+    margin-bottom: 20px;
 }
 .table-bordered th, .table-bordered td {
     border: 1px solid #444;
@@ -248,6 +249,19 @@ form {
     transition: background-color 0.3s, border-color 0.3s;
     color: #BBC4BA;
     font-weight: bold;
+}
+
+.label {
+    position: relative;
+    bottom: 74px;
+    left: 30px;
+    z-index: 1;
+    background-color: #10151C;
+    padding-left: 2px;
+    padding-right: 2px;
+    font-size: 10px;
+    color: #ffe8e8;
+    text-shadow: 0 0 8px rgba(179, 255, 252, 0.6)
 }
 
 .form-control:focus {
@@ -428,7 +442,7 @@ h1 {
     color: #b5fffc;
 }
 
-.thank-you {
+.thank-you .failure {
     justify-self: center;
     width: 700px;
     transition: 0.75s ease;
@@ -454,6 +468,9 @@ h1 {
 
 /* Adjust title font size and margins for smaller screens */
 @media (max-width: 700px) {
+    .container {
+        max-width: 90%;
+    }
     #title {
         padding: 10px;
         margin-top: 75px;
@@ -474,8 +491,8 @@ h1 {
         transition: 0.75s ease;
     }
     .btn {
-        font-size: 0.875rem;
-        padding: 8px 8px 8px 8px;
+        font-size: 0.75rem;
+        padding: 5px 5px 5px 5px;
         transition: 0.75s ease;
     }
     .navbar-nav .nav-item .nav-link, .table tbody td{
@@ -496,6 +513,9 @@ h1 {
 
 /* Even smaller screens */
 @media (max-width: 450px) {
+    .container {
+        max-width: 97%;
+    }
     #title {
         padding: 5px;
         margin-top: 100px;
@@ -508,11 +528,6 @@ h1 {
     }
     .h3-title {
         font-size: 12px;
-        transition: 0.75s ease;
-    }
-    .btn {
-        font-size: 0.75rem;
-        padding: 5px 5px 5px 5px;
         transition: 0.75s ease;
     }
     .navbar-nav .nav-item .nav-link, .table tbody td {
