--- a/src/main/resources/templates/negativeerror.html
+++ b/src/main/resources/templates/negativeerror.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/demo.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Negative Error</title>
 </head>
-<body>
-<p>Cannot delete a part used in a product</p>
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<div class="navContainer">
+    <nav class="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/mainscreen}" href="/mainscreen">Mainscreen</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/about}" href="/about">About</a>
+            </li>
+            <li class="nav-item title h3-title">
+                <a th:href="@{/mainscreen}" class="title-link">Online Grocery Shopping</a>
+            </li>
+        </ul>
+    </nav>
+</div>
+<body style="text-align: center; margin-top: 100px;">
+
+<h1 style="padding: 1rem 1rem 1rem 1rem"><span style="color: #785762">Oops!</span> Cannot delete a part used in a product</h1>
+<div class="failure">
+    <p class="p">You will be redirected to the mainscreen in <span id="countdown">5</span> seconds...</p>
+</div>
+
+<script>
+    const navbar = document.querySelector('.navbar');
+    const h3Title = document.querySelector('.h3-title');
+
+    setTimeout(() => {
+        h3Title.classList.add('slide-in');
+    }, 300);
+
+    setTimeout(() => {
+        navbar.classList.add('navbar-lit');
+    }, 50);
+
+
+    // Set the countdown time in seconds
+    let countdownTime = 5;
+    const countdownElement = document.getElementById("countdown");
+
+    // Update the countdown every second
+    const countdownInterval = setInterval(() => {
+        countdownTime--;
+        countdownElement.textContent = countdownTime;
+
+        // Redirect when countdown reaches 0
+        if (countdownTime <= 0) {
+            clearInterval(countdownInterval);
+            window.location.href = "mainscreen";
+        }
+    }, 1000);
+</script>
 </body>
 </html>
