--- a/src/main/resources/static/css/demo.css
+++ b/src/main/resources/static/css/demo.css
@@ -1,7 +1,4 @@
 /* Hidden Elements */
-.hidden-column {
-    display: none;
-}
 
 body {
     background-color: #10151C;
@@ -34,7 +31,7 @@ body {
     background-clip: text;
     -webkit-background-clip: text;
     position: relative;
-    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     transition: all 0.5s ease-out;
     margin-bottom: 40px;
 }
@@ -71,9 +68,7 @@ body {
     z-index: 0;
     transition: transform 0.3s ease-out, opacity 0.75s ease-in;
 }
-.h3-title.slide-in {
-    opacity: 1;
-}
+
 .h3-title::before {
     content: attr(data-text);
     position: relative;
@@ -276,23 +271,6 @@ form {
     color: #aaa;
 }
 
-.dropdown-menu {
-    background-color: #222;
-    border: 1px solid #666;
-    border-radius: 5px;
-    color: #fff;
-}
-
-
-.dropdown-item {
-    color: #666;
-    background-color: #222;
-}
-
-.dropdown-item:hover {
-    background-color: #444;
-    color: #fff;
-}
 
 .navContainer {
     background-color: #10151C !important;
@@ -336,21 +314,10 @@ form {
 }
 
 /* Lit-up effect for the navbar on load */
-.navbar-lit::before {
-    transform: translateX(0); /* Move in from the right */
-}
 
 /* Navbar scroll effect */
-.navbar-scrolled::before {
-    transform: translateX(100%); /* Slide out to the right */
-}
 
 /* Navbar brand styling */
-.navbar-brand {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #e6e6fa !important;
-}
 
 .navbar ul {
     display: flex;
@@ -440,12 +407,6 @@ h1 {
 }
 #countdown {
     color: #b5fffc;
-}
-
-.thank-you .failure {
-    justify-self: center;
-    width: 700px;
-    transition: 0.75s ease;
 }
 
 @media (max-width: 1000px) {
