--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -35,15 +35,18 @@
     <hr class="border-secondary">
 
     <!-- Parts -->
-    <h3 class="section-title">Parts</h3>
-    <form th:action="@{/mainscreen}" class="mb-3">
-        <label for="partkeyword">Filter:</label>
-        <input type="text" name="partkeyword" id="partkeyword" size="50" th:value="${partkeyword}" required class="form-control d-inline w-50"/>
-        <input type="submit" value="Search" class="btn btn-secondary"/>
-        <input type="button" value="Clear" id="btnClearPart" onclick="clearSearch()" class="btn btn-secondary"/>
+    <h3 class="section-title">Grocery Items</h3>
+    <form th:action="@{/mainscreen}" class="mb-3 d-flex">
+        <a th:href="@{/showFormAddInPart}" class="btn btn-secondary btn-sm new"><img src="/assets/new.svg"></a>
+        <input type="text" placeholder="   Filter" name="partkeyword" id="partkeyword" size="50" th:value="${partkeyword}" required class="form-control d-inline flex-grow1"/>
+        <!-- Search Button with SVG -->
+        <button type="submit" class="btn btn-secondary">
+            <img src="/assets/search.svg" alt="Search" style="width: 24px; height: 24px;"/>
+        </button>
+        <button type="button" id="btnClearGroc" onclick="clearSearch()" class="btn btn-secondary">
+            <img src="/assets/clear.svg" alt="Clear" style="width: 24px; height: 24px;"/>
+        </button>
     </form>
-    <a th:href="@{/showFormAddInPart}" class="btn btn-primary btn-sm mb-3">Add Inhouse Part</a>
-    <a th:href="@{/showFormAddOutPart}" class="btn btn-primary btn-sm mb-3">Add Outsourced Part</a>
 
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
@@ -64,23 +67,69 @@
             <td th:text="${tempPart.minInv}">Min</td>
             <td th:text="${tempPart.maxInv}">Max</td>
             <td>
-                <a th:href="@{/showPartFormForUpdate(partID=${tempPart.id})}" class="btn btn-primary btn-sm">Update</a>
+                <a th:href="@{/showPartFormForUpdate(partID=${tempPart.id})}" class="btn btn-primary btn-sm"><img src="/assets/edit.svg"></a>
                 <a th:href="@{/deletepart(partID=${tempPart.id})}" class="btn btn-delete btn-sm"
-                   onclick="if(!(confirm('Are you sure you want to delete this part?')))return false">Delete</a>
+                   onclick="if(!(confirm('Are you sure you want to delete this part?')))return false"><img src="/assets/delete.svg"></a>
             </td>
         </tr>
         </tbody>
     </table>
 
-    <!-- Products -->
-    <h3 class="section-title">Products</h3>
-    <form th:action="@{/mainscreen}" class="mb-3">
-        <label for="productkeyword">Filter:</label>
-        <input type="text" name="productkeyword" id="productkeyword" size="50" th:value="${productkeyword}" required class="form-control d-inline w-50"/>
-        <input type="submit" value="Search" class="btn btn-secondary"/>
-        <input type="button" value="Clear" id="btnClearProduct" onclick="clearSearch()" class="btn btn-secondary"/>
+    <!-- Non Grocery Items -->
+    <h3 class="section-title">Non Grocery</h3>
+    <form th:action="@{/mainscreen}" class="mb-3 d-flex">
+        <a th:href="@{/showFormAddNonGrocery}" class="btn btn-secondary btn-sm new"><img src="/assets/new.svg"></a>
+        <input type="text" placeholder="   Filter" name="nongrockeyword" id="nongrockeyword" size="50" th:value="${nongrockeyword}" required class="form-control d-inline flex-grow1"/>
+        <!-- Search Button with SVG -->
+        <button type="submit" class="btn btn-secondary">
+            <img src="/assets/search.svg" alt="Search" style="width: 24px; height: 24px;"/>
+        </button>
+        <button type="button" id="btnClearNonGroc" onclick="clearSearch()" class="btn btn-secondary">
+            <img src="/assets/clear.svg" alt="Clear" style="width: 24px; height: 24px;"/>
+        </button>
     </form>
-    <a th:href="@{/showFormAddProduct}" class="btn btn-primary btn-sm mb-3">Add Product</a>
+
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
+        <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Inventory</th>
+            <th>Min</th>
+            <th>Max</th>
+            <th>Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="tempPart : ${nonGroceries}">
+            <td th:text="${tempPart.name}">Part Name</td>
+            <td th:text="${tempPart.price}">$0.00</td>
+            <td th:text="${tempPart.inv}">Stock</td>
+            <td th:text="${tempPart.minInv}">Min</td>
+            <td th:text="${tempPart.maxInv}">Max</td>
+            <td>
+                <a th:href="@{/showPartFormForUpdateNonGrocery(id=${tempPart.id})}" class="btn btn-primary btn-sm"><img src="/assets/edit.svg"></a>
+                <a th:href="@{/deleteNonGrocery(id=${tempPart.id})}" class="btn btn-delete btn-sm"
+                   onclick="if(!(confirm('Are you sure you want to delete this part?')))return false"><img src="/assets/delete.svg"></a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+
+    <!-- Products -->
+    <h3 class="section-title">Meals</h3>
+    <form th:action="@{/mainscreen}" class="mb-3 d-flex">
+        <a th:href="@{/showFormAddProduct}" class="btn btn-secondary btn-sm  new"><img src="/assets/new.svg"></a>
+        <input type="text" placeholder="   Filter" name="productkeyword" id="productkeyword" size="50" th:value="${productkeyword}" required class="form-control d-inline flex-grow1"/>
+        <!-- Search Button with SVG -->
+        <button type="submit" class="btn btn-secondary">
+            <img src="/assets/search.svg" alt="Search" style="width: 24px; height: 24px;"/>
+        </button>
+        <button type="button" id="btnClearGroc" onclick="clearSearch()" class="btn btn-secondary">
+            <img src="/assets/clear.svg" alt="Clear" style="width: 24px; height: 24px;"/>
+        </button>
+    </form>
 
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
@@ -97,9 +146,9 @@
             <td th:text="${tempProduct.price}">$0.00</td>
             <td th:text="${tempProduct.inv}">Stock</td>
             <td>
-                <a th:href="@{/showProductFormForUpdate(productID=${tempProduct.id})}" class="btn btn-primary btn-sm">Update</a>
+                <a th:href="@{/showProductFormForUpdate(productID=${tempProduct.id})}" class="btn btn-primary btn-sm"><img src="/assets/edit.svg"></a>
                 <a th:href="@{/deleteproduct(productID=${tempProduct.id})}" class="btn btn-delete btn-sm"
-                   onclick="if(!(confirm('Are you sure you want to delete this product?')))return false">Delete</a>
+                   onclick="if(!(confirm('Are you sure you want to delete this product?')))return false"><img src="/assets/delete.svg"></a>
                 <a th:href="@{/buyProduct(productID=${tempProduct.id})}" class="btn btn-buy btn-sm">Buy Now</a>
             </td>
         </tr>
